типо каталог есть

--- a/app/views/indexXml.scala.html
+++ b/app/views/indexXml.scala.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        @main("Реестр справочников"){
+        @main("Каталог вина"){
         <h1>@message</h1>
         @listviesXml(list,list2)
     }
