типо каталог есть

--- a/app/views/indexStartPage.scala.html
+++ b/app/views/indexStartPage.scala.html
@@ -1,4 +1,4 @@
-@(message: String)(list:Seq[String],list2:Seq[String])
+@()
 <html>
 
     <head>
@@ -7,9 +7,8 @@
     </head>
     <body>
 
-        @main("Каталог вина"){
-        <h1>@message</h1>
-        @listviesXml(list,list2)
+        @main("О проекте"){
+        @startPage()
     }
 
     </body>
