--- a/app/views/providerrPage.scala.html
+++ b/app/views/providerrPage.scala.html
@@ -8,6 +8,24 @@
 
     </head>
     <body>
-        <h2>Cтраница находится в разработке </h2>
+
+        <div align="center">
+            <h2>Barton & Guestier</h2>
+
+            <p></p>
+
+            <ul id="nav">
+                <li><a href="@routes.testController.contactPage()">Контакты </a ></li>
+
+                <li><a href="@routes.testController.providerPage()">Поставщики </a></li>
+                <li><a href="@routes.testController.catalogPage()">Каталог </a></li>
+                <li><a href="@routes.testController.test()">О проекте </a></li>
+
+            </ul>
+            <table>
+                <tr>
+                    <th>Страница находится в разработке</th>
+                </tr>
+            </table>
     </body>
-</html>@()
+</html>
