--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -15,13 +15,16 @@
             <p></p>
 
         <ul id="nav">
-            <li><a href="@routes.testController.contactPage()">Контакты </a ></li>
-
-            <li><a href="@routes.testController.providerPage()">Поставщики </a></li>
-            <li><a href="@routes.testController.catalogPage()">Каталог </a></li>
-            <li><a href="@routes.testController.test()">О проекте </a></li>
+            <li> <a href="@routes.mainPageController.projectPage()">Личный кабинет </a></li>
+            <li><a href="@routes.mainPageController.contactPage()">Контакты </a ></li>
+            <li><a href="@routes.mainPageController.providerPage()">Поставщики </a></li>
+            <li><a href="@routes.mainPageController.catalogPage()">Каталог </a></li>
+            <li><a href="@routes.mainPageController.projectPage()">О проекте </a></li>
 
         </ul>
+
+
+
             <table>
                 <tr>
                     <th>Дорогие Гости, добро пожаловать на сайт Винного Дома Barton & Guestier!</th>
@@ -34,8 +37,11 @@
                         а скорее необходимость, ведь, как говорил Гете –
                         «Жизнь слишком коротка, чтобы пить плохое вино».
                         Где можно приобрести, а главное научиться распознавать достойный напиток?
-                        Есть такое место... Таня сделает красивое оформление текста, лесенка
-                    к примеру</th>
+                        Есть такое место...
+                        Таня сделает красивое оформление текста, лесенка
+                    к примеру, потом надо сделать чтобы при нажатии на личный кабинет выпадал список
+                    вход или регистрации, и при нажатии на соотвествующую кнопку выходила
+                    всплывающая форма  входа или регистрации</th>
 
                 </tr>
             </table>
