--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -14,11 +14,11 @@
             <p></p>
 
             <ul id="nav">
-                <li><a href="@routes.testController.contactPage()">Контакты </a ></li>
+                <li><a href="@routes.mainPageController.contactPage()">Контакты </a ></li>
 
-                <li><a href="@routes.testController.providerPage()">Поставщики </a></li>
-                <li><a href="@routes.testController.catalogPage()">Каталог </a></li>
-                <li><a href="@routes.testController.test()">О проекте </a></li>
+                <li><a href="@routes.mainPageController.providerPage()">Поставщики </a></li>
+                <li><a href="@routes.mainPageController.catalogPage()">Каталог </a></li>
+                <li><a href="@routes.mainPageController.projectPage()">О проекте </a></li>
 
 
             </ul>
