--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -15,7 +15,7 @@
             <p></p>
 
         <ul id="nav">
-            <li> <a href="@routes.mainPageController.projectPage()">Личный кабинет </a></li>
+            <li> <a href="@routes.LoginController.renderLoginForm()">Личный кабинет </a></li>
             <li><a href="@routes.mainPageController.contactPage()">Контакты </a ></li>
             <li><a href="@routes.mainPageController.providerPage()">Поставщики </a></li>
             <li><a href="@routes.mainPageController.catalogPage()">Каталог </a></li>
