типо каталог есть, вход

--- a/public/stylesheets/startPage.css
+++ b/public/stylesheets/startPage.css
@@ -12,7 +12,7 @@ H2{
 
 }
 #nav {
-    width: 42%;
+    width: 32%;
     float: right;
     position: relative;
     left: -2%;
@@ -52,4 +52,60 @@ TH {
     font-weight:bold;
     font-size:20px;
 
+}
+
+
+ul {
+    display: block;
+    float: right;
+    margin-top: -8%;
+    padding: 0;
+
+    list-style: none;
+}
+ul:after {
+    display: block;
+    content: ' ';
+    clear: both;
+    float: none;
+}
+ul.menu > li {
+    float: left;
+    position: relative;
+}
+ul.menu > li > a {
+    display: block;
+    padding: 10px;
+    color: white;
+    background-color: red;
+    text-decoration: none;
+}
+ul.menu > li > a:hover {
+    background-color: black;
+}
+ul.submenu {
+    display: none;
+    position: absolute;
+    width: 120px;
+    top: 37px;
+    left: 0;
+    background-color: white;
+    border: 1px solid red;
+}
+ul.submenu > li {
+    display: block;
+}
+ul.submenu > li > a {
+    display: block;
+    padding: 10px;
+    color: white;
+    background-color: red;
+    text-decoration: none;
+}
+ul.submenu > li > a:hover {
+    text-decoration: underline;
+}
+
+ul.menu > li:hover > ul.submenu {
+    display: block;
 }
