регистрация + личный кабинет

--- a/app/views/indexCatalogPage.scala.html
+++ b/app/views/indexCatalogPage.scala.html
@@ -1,4 +1,4 @@
-@(list:Seq[String],list2:Seq[String])
+@(list:Seq[String],list2:Seq[String],login:String)
 <html>
 
     <head>
@@ -7,9 +7,16 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
     </head>
     <body>
+        @if(!(login.isEmpty)){
+            <div align="right">
 
+                Вы вошли как :@login
+
+                <br>
+            </div>
+        }
     @main("Каталог вина"){
-        @catalogPage(list,list2)
+        @catalogPage(list,list2,login)
     }
 
     </body>
