--- a/app/views/providerrPage.scala.html
+++ b/app/views/providerrPage.scala.html
@@ -1,4 +1,4 @@
-@(items:Seq[String],items2:Seq[String])
+@(items:Seq[String],items2:Seq[String],login:String)
 <html>
 
     <head>
@@ -13,12 +13,36 @@
             <h2>Barton & Guestier</h2>
 
             <p></p>
+            <ul class="menu" >
+                <li> <a href=#>Личный кабинет </a>
+                    <ul class="submenu">
+                        @if(login.isEmpty) {
+                            <li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>
+                            <li><a href="@routes.UsersController.renderAddUserForm()">Регистрация</a></li>
+                        }
+                        @if(!(login.isEmpty)){
+                            <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                        }
 
+                    </ul>
+                </li>
+
+            </ul>
             <ul id="nav">
-                <li><a href="@routes.mainPageController.contactPage()">Контакты </a ></li>
-                <li><a href="@routes.mainPageController.providerPage()">Поставщики </a></li>
-                <li><a href="@routes.mainPageController.catalogPage()">Каталог </a></li>
-                <li><a href="@routes.mainPageController.projectPage()">О проекте </a></li>
+                @if(login.isEmpty) {
+
+                    <li><a href="@routes.mainPageController.contactPage("")">Контакты </a ></li>
+                    <li><a href="@routes.mainPageController.providerPage("")">Поставщики </a></li>
+                    <li><a href="@routes.mainPageController.catalogPage("")">Каталог </a></li>
+                    <li><a href="@routes.mainPageController.projectPage("")">О проекте </a></li>
+                }
+                @if(!(login.isEmpty)){
+
+                    <li><a href="@routes.mainPageController.contactPage(login)">Контакты </a ></li>
+                    <li><a href="@routes.mainPageController.providerPage(login)">Поставщики </a></li>
+                    <li><a href="@routes.mainPageController.catalogPage(login)">Каталог </a></li>
+                    <li><a href="@routes.mainPageController.projectPage(login)">О проекте </a></li>
+                }
 
 
             </ul>
