--- a/app/views/indexCatalogPage.scala.html
+++ b/app/views/indexCatalogPage.scala.html
@@ -1,4 +1,4 @@
-@(list:Seq[String],list2:Seq[String],login:String)
+@(list:Seq[String],list2:Seq[wine],login:String,isAdmin:Boolean)
 <html>
 
     <head>
@@ -16,7 +16,7 @@
             </div>
         }
     @main("Каталог вина"){
-        @catalogPage(list,list2,login)
+        @catalogPage(list,list2,login,isAdmin)
     }
 
     </body>
