--- a/app/views/indexContactPage.scala.html
+++ b/app/views/indexContactPage.scala.html
@@ -1,4 +1,4 @@
-@(login:String)
+@(login:String,isAdmin:Boolean)
 <html>
 
     <head>
@@ -16,7 +16,7 @@
             </div>
         }
     @main("Контакты"){
-        @contactPage(login)
+        @contactPage(login,isAdmin)
     }
 
     </body>
