--- a/app/views/indexProjectPage.scala.html
+++ b/app/views/indexProjectPage.scala.html
@@ -1,4 +1,4 @@
-@(login : String)
+@(login : String,isAdmin:Boolean)
 <html>
 
     <head>
@@ -16,7 +16,7 @@
         </div>
         }
         @main("О проекте"){
-        @projectPage(login)
+        @projectPage(login,isAdmin)
     }
 
     </body>
