--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -45,6 +45,9 @@
                 <li><a href="@routes.mainPageController.providerPage(login,isAdmin)">Поставщики </a></li>
                 <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
                 <li><a href="@routes.mainPageController.projectPage(login,isAdmin)">О проекте </a></li>
+                @if(isAdmin){
+                    <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+                }
             }
 
 
