--- a/app/views/providerrPage.scala.html
+++ b/app/views/providerrPage.scala.html
@@ -42,6 +42,10 @@
                     <li><a href="@routes.mainPageController.providerPage(login,isAdmin)">Поставщики </a></li>
                     <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage(login,isAdmin)">О проекте </a></li>
+                    @if(isAdmin){
+                        <li><a href=#>Добавить поставщика </a></li>
+                        <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+                    }
                 }
 
 
