--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -16,7 +16,7 @@
 
             <input type ="submit" value="Войти">
 
-            <a href="@routes.UsersController.renderAddUserForm()" class="slick-login2">Регистрация</a>
+            <a href="@routes.UsersController.renderAddUserForm(false)" class="slick-login2">Регистрация</a>
 
         }
 
