--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -28,7 +28,7 @@
                     <li><a href="@routes.WineController.catalogPage(login,true)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage(login,true)">О проекте </a></li>
                     <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
-
+                    <li><a href="@routes.UsersController.renderAddUserForm(true)">Добавить пользователя </a></li>
             </ul>
             <p></p>
             <p></p>
@@ -57,7 +57,8 @@
                     <th>@item.getPassword</th>
                     <th>@item.getAdmin</th>
 
-                    <th><a href="@routes.UsersController.deleteUser(item.getId,login)" > Удалить </a></th>
+                    <th><a href="@routes.UsersController.renderUpdateUserInfo(item.getId,login)">Редактировать</a>
+                    <a href="@routes.UsersController.deleteUser(item.getId,login)" > Удалить </a></th>
                     <tr></tr>
                 }
 
