--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -1,22 +1,73 @@
-@(login:String,isAdmin:Boolean)
+@(login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm], registrationForm : play.data.Form[User], error: Integer)
 <html>
-
+ @*0 -no error , if 1 - error*@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+
+        <script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>
 
     </head>
     <body>
        <div align="center">
        <h2>Barton & Guestier</h2>
 
+               <!-- Модальное окно №1 -->
+           <a href="#x" class="overlay" id="win1"></a>
+           <div class="popup">
+               @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login"){
+                   <h1>Вход в личный кабинет </h1>
+                   <br>
+                   @helper.inputText(bookForm("login"),'_showConstraints ->false, 'placeholder -> "Логин",'required -> "required")
+                   @helper.inputPassword(bookForm("password"),'_showConstraints ->false, 'placeholder -> "Пароль",'required -> "required")
+
+                   <input type ="submit" value="Войти">
+
+                   <a href="@routes.UsersController.renderAddUserForm(false)" class="slick-login2">Регистрация</a>
+
+               }
+           <a class="close"title="Закрыть" href="#close"></a>
+           </div>
+
+
+
+               <!-- Модальное окно №2 -->
+           <a href="#x" class="overlay" id="win2"></a>
+           <div class="popup">
+               <h1 class="g1">Регистрация</h1>
+
+               @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login"){
+
+                   @helper.inputText(registrationForm("login"),'_showConstraints ->false,'placeholder -> "Логин",'required -> "required")
+
+                   @helper.inputText(registrationForm("password"),'_showConstraints ->false,'placeholder -> "Ваш сложный пароль",'required -> "required")
+                   @if(isAdmin){
+                       Права администратора:@helper.checkbox(registrationForm("isAdmin"))
+                   }
+
+                   <input type ="submit" value="Создать">
+
+               }
+               <a class="close"title="Закрыть" href="#close"></a>
+           </div>
+
+@*хочу чтобы здесь был код появляющийся в случае ошибки*@
+           @if(error == 0){
+               Зашли
+
+
+
+           }
             <p></p>
+
 
             <ul class="menu" >
                 <li> <a href=#>Личный кабинет </a>
                     <ul class="submenu">
-                        @if(login.isEmpty) {
+                        @if(login.isEmpty ) {
+                            <li><a href="#win1" class="button button-green">Вход</a></li>
+                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
                             <li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>
                             <li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>
                         }
