ошибка авторизации на странице

--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -53,11 +53,8 @@
            </div>
 
 @*хочу чтобы здесь был код появляющийся в случае ошибки*@
-           @if(error == 0){
-               Зашли
-
-
-
+           @if(error == 1 || error ==2){
+               Неверный пароль или логин, упс(((
            }
             <p></p>
 
