--- a/app/views/indexProjectPage.scala.html
+++ b/app/views/indexProjectPage.scala.html
@@ -1,4 +1,4 @@
-@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User])
+@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer)
 <html>
 
     <head>
@@ -16,7 +16,7 @@
         </div>
         }
         @main("О проекте"){
-        @projectPage(login,isAdmin,bookForm,registrationForm,0)
+        @projectPage(login,isAdmin,bookForm,registrationForm,error)
     }
 
     </body>
