--- a/app/views/test.scala.html
+++ b/app/views/test.scala.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <script src="@routes.Assets.versioned("javascripys/test.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/test.js")"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/test.css")">
 
 
@@ -40,8 +40,10 @@
                     Простейшая анимация появления с помощью изменения свойсва прозрачности (opacity) от 0 к 1
                 </p>
                 <button class="close" id="trog" title="Закрыть"></button>
+
             </div>
         </div>
+
         <script src="@routes.Assets.versioned("lib/jquery/jquery.js")"></script>
     </body>
 </html>
