--- a/public/stylesheets/test.css
+++ b/public/stylesheets/test.css
@@ -1,159 +1,207 @@
-* {
-    box-sizing: border-box;
-}
-body {
-    background: #00796B;
-    margin: 0;
-    font:14px/1.3 'Roboto',Helvetica,sans-serif;
-}
-h1,
-h2 {
-    font-weight: 300;
-    margin: 0 0 1rem 0;
-}
-a {
-    text-decoration: none;
-    color: #72dea0;
-}
-a:hover {color: #82eaae}
-header {
-    padding: 7vh 10vw;
-    background: #ffebee;
-}
-header h1 {
-    color: rgba(0,0,0,0.54);
-}
-.info {
-    background: #009688;
-    padding: 3vh 10vw;
-    color: #d9d9d9;
-}
-/* Всплывающее окно
-* при загрузке сайта
-*/
-/* базовый контейнер, фон затемнения*/
-#overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
+.cover {
     height: 100%;
-    background: rgba(0, 0, 0, 0.65);
-    z-index: 999;
-    -webkit-animation: fade .6s;
-    -moz-animation: fade .6s;
-    animation: fade .6s;
-    overflow: auto;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
 }
-/* модальный блок */
-.popup {
-    top: 25%;
+
+.blur-in {
+    -webkit-animation: blur 2s forwards;
+    -moz-animation: blur 2s forwards;
+    -o-animation: blur 2s forwards;
+    animation: blur 2s forwards;
+}
+
+.blur-out {
+    -webkit-animation: blur-out 2s forwards;
+    -moz-animation: blur-out 2s forwards;
+    -o-animation: blur-out 2s forwards;
+    animation: blur-out 2s forwards;
+}
+
+@-webkit-keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@-moz-keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@-o-keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@-webkit-keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+@-moz-keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+@-o-keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+@keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+.content {
+    width: 650px;
+    margin: 0 auto;
+    padding-top: 100px;
+}
+
+span {
+    color: dimgray;
+}
+
+.pop-up {
+    position: fixed;
+    margin: 5% auto;
     left: 0;
     right: 0;
-    font-size: 14px;
-    margin: auto;
-    width: 85%;
-    min-width: 320px;
-    max-width: 600px;
-    position: absolute;
-    padding: 15px 20px;
-    border: 1px solid #383838;
-    background: #fefefe;
-    z-index: 1000;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    border-radius: 4px;
-    font: 14px/18px 'Tahoma', Arial, sans-serif;
-    -webkit-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    -moz-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    -ms-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    -webkit-animation: fade .6s;
-    -moz-animation: fade .6s;
-    animation: fade .6s;
+    z-index: 2;
 }
-/* заголовки в модальном блоке */
-.popup h2, .popup h3 {
-    margin: 0 0 1rem 0;
-    font-weight: 300;
-    line-height: 1.3;
-    color: #009032;
-    text-shadow: 1px 2px 4px #ddd;
-}
-/* кнопка закрытия */
-.close {
-    top: 10px;
-    right: 10px;
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    border: none;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
-    background-color: rgba(0, 131, 119, 0.9);
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    cursor: pointer;
-    outline: none;
 
+.box {
+    background-color: whitesmoke;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    position: relative;
+    -webkit-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
 }
-.close:before {
-    color: rgba(255, 255, 255, 0.9);
-    content: "X";
-    font-family:  Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    text-decoration: none;
-    text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    transition: all 0.5s;
+
+.button {
+    margin : auto;
+    background-color: #FF8566;
+    margin-bottom: 33px;
 }
-/* кнопка закрытия при наведении */
-.close:hover {
-    background-color: rgba(252, 20, 0, 0.8);
-}
-/* изображения в модальном окне */
-.popup img {
-    width: 100%;
-    height: auto;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-/* миниатюры изображений */
-.pl-left,
-.pl-right {
-    width: 25%;
-    height: auto;
-}
-/* миниатюры справа */
-.pl-right {
-    float: right;
-    margin: 5px 0 5px 15px;
-}
-/* миниатюры слева */
-.pl-left {
-    float: left;
-    margin: 5px 18px 5px 0;
-}
-/* анимация при появлении блоков с содержанием */
-@-moz-keyframes fade {
-    from { opacity: 0; }
-    to { opacity: 1 }
-}
-@-webkit-keyframes fade {
-    from { opacity: 0; }
-    to { opacity: 1 }
-}
-@keyframes fade {
-    from { opacity: 0; }
-    to { opacity: 1 }
-}
-model{
-    display: block;
+
+.button:hover {
+    background-color: #7CCF29;
+    -webkit-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
 }
